--- a/style.css
+++ b/style.css
@@ -111,3 +111,11 @@ p{
 #more .best .button{
     background: #eda745;
 }
+
+#download{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
