--- a/style.css
+++ b/style.css
@@ -1,50 +1,50 @@
 * {
-	background: transparent;
-	font-weight: normal;
-	text-decoration: none;
-	outline: none;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    background: transparent;
+    font-weight: normal;
+    text-decoration: none;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 del {
-	text-decoration: line-through;
+    text-decoration: line-through;
 }
 body {
-	font-family: "GT-Eesti", Arial, Helvetica, sans-serif;
-	font-size: 17px;
-	color: #000;
-	overflow-x: hidden;
-	min-width: 320px;
-	font-weight: 500;
+    font-family: "GT-Eesti", Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    color: #000;
+    overflow-x: hidden;
+    min-width: 320px;
+    font-weight: 500;
 }
 input,textarea,select{
-	font-family: "GT-Eesti", Arial, Helvetica, sans-serif;
-	font-weight: 500;
+    font-family: "GT-Eesti", Arial, Helvetica, sans-serif;
+    font-weight: 500;
 }
 h1{
     font-size: 44px;
     color: orange;
 }
 a{
-	color: #000;
+    color: #000;
 }
 .thumb{
-	display: block;
+    display: block;
 }
 .thumb img{
-	display: block;
-	width:100%;
+    display: block;
+    width:100%;
 }
 p{
-	line-height:1.6em;
-	font-size: 16px;
-	font-family: "GT-Eesti", Arial;
-	font-weight: 500;
-	color: #000;
+    line-height:1.6em;
+    font-size: 16px;
+    font-family: "GT-Eesti", Arial;
+    font-weight: 500;
+    color: #000;
 }
 .button{
     padding: 12px 24px;
@@ -52,7 +52,6 @@ p{
     color: #fff;
     margin-top: 20px;
 }
-
 #video{
     display: flex;
     flex-direction: column;
@@ -60,7 +59,6 @@ p{
     justify-content: center;
     margin-bottom: 60px;
 }
-
 #heading{
     display: flex;
     flex-direction: column;
@@ -69,7 +67,6 @@ p{
     font-weight: bold;
     font-size: 20px;
 }
-
 #pdfs{
     display: flex;
     flex-direction: column;
@@ -77,11 +74,9 @@ p{
     justify-content: center;
     margin-bottom: 120px;
 }
-
 #pdfs img{
     width: 500px;
 }
-
 #more{
     display: flex;
     flex-direction: column;
@@ -89,7 +84,6 @@ p{
     justify-content: center;
     margin-bottom: 60px;
 }
-
 #more .images{
     margin-bottom: 20px;
     display: flex;
@@ -97,25 +91,21 @@ p{
     align-items: center;
     justify-content: center;
 }
-
 #more .images img{
     margin-bottom: 20px;
     height: 300px;
     width: 940px;
 }
-
 #more .images img.start{
     height: 200px;
 }
-
 #more .best .button{
     background: #eda745;
 }
-
-#download{
+#download, #midi-download {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 60px;
 }
-
